Fix font-size issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -107,14 +107,17 @@ template: bb-theme
     .swatch-anchor[title=White]:after, .swatch-anchor[title=white]:after {
       color: #333 !important; }
 
-.firstline {
-  display: block;
-  font-size: 50%;
-  letter-spacing: 7px; }
-
-.shadow {
+.fl-node-591f960981be9.fl-module-heading .fl-heading {
+  font-size: 15vw;
   text-shadow: 0 0 15px rgba(0, 0, 0, 0.2); }
+  .fl-node-591f960981be9.fl-module-heading .fl-heading .firstline {
+    display: block;
+    font-size: 50%;
+    letter-spacing: 7px; }
 
+@media screen and (min-width: 768px) {
+  .fl-node-591f960981be9.fl-module-heading .fl-heading {
+    font-size: 10vw; } }
 .fl-page-header {
   transition: 300ms ease background-color; }
 
